[package]
name = "steer"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
bevy = "0.5.0"
"rand" = "*"
bevy_prototype_debug_lines = "*"